# learning_metal

./: .gitignore  CMakeLists.txt  app_delegate.cpp  app_delegate.h  boilerplate_example.cpp  boilerplate_example.h  config.h  main.cpp  metalChecks.cpp  metalChecks.h  renderer.cpp  renderer.h  view_delegate.h
lib/: config.h
lib/metal-cpp/: README.md
lib/metal-cpp/AppKit/: AppKitPrivate.hpp
lib/metal-cpp/Metal/: MTLAccelerationStructure.hpp  MTLAccelerationStructureCommandEncoder.hpp  MTLBlitCommandEncoder.hpp  MTLBuffer.hpp  MTLCommandBuffer.hpp  MTLDepthStencil.hpp  MTLDynamicLibrary.hpp  MTLFunctionConstantValues.hpp  MTLFunctionHandle.hpp  MTLIOCommandQueue.hpp  MTLLinkedFunctions.hpp  MTLPixelFormat.hpp  MTLRenderCommandEncoder.hpp  MTLRenderPass.hpp  MTLRenderPipeline.hpp  MTLResourceStateCommandEncoder.hpp  MTLSampler.hpp  MTLStageInputOutputDescriptor.hpp  MTLTexture.hpp
lib/metal-cpp/QuartzCore/: CAPrivate.hpp
metal-cpp/Metal/: MTLArgument.hpp  MTLArgumentEncoder.hpp  MTLBinaryArchive.hpp  MTLBlitPass.hpp  MTLCaptureManager.hpp  MTLCommandEncoder.hpp  MTLCommandQueue.hpp  MTLComputeCommandEncoder.hpp  MTLComputePass.hpp  MTLComputePipeline.hpp  MTLCounters.hpp  MTLDevice.hpp  MTLDrawable.hpp  MTLEvent.hpp  MTLFence.hpp  MTLFunctionDescriptor.hpp  MTLFunctionLog.hpp  MTLFunctionStitching.hpp  MTLHeap.hpp  MTLIOCommandBuffer.hpp  MTLIOCompressor.hpp  MTLIndirectCommandBuffer.hpp  MTLIndirectCommandEncoder.hpp  MTLIntersectionFunctionTable.hpp  MTLLibrary.hpp  MTLParallelRenderCommandEncoder.hpp  MTLPipeline.hpp  MTLRasterizationRate.hpp  MTLResource.hpp  MTLResourceStatePass.hpp  MTLTypes.hpp  MTLVertexDescriptor.hpp  MTLVisibleFunctionTable.hpp
src/projects/Small_test_compute/: ArrayAdder.h  ArrayAdder.mm  CoffeeWithArch_examples.cpp  CoffeeWithArch_examples.h  addition.metal  coffeewitharch_examples.metal
src/projects/checks_examples/: check_for_metal_device.cpp  check_for_metal_device.h
src/projects/compute_function_examples/: 00-window.cpp  compute_function_examples.cpp  compute_function_examples.h
src/projects/graphical_implementation_example/: graphical_example_m.cpp  graphical_example_m.h
src/projects/graphical_implementation_example/control/: app_delegate.h  view_delegate.cpp  view_delegate.h
src/projects/graphical_implementation_example/view/: renderer.h
